--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.3",
         "barryvdh/laravel-snappy": "^0.4.3",
+        "cartalyst/stripe-laravel": "^8.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "niklasravnsborg/laravel-pdf": "^2.0"
+        "niklasravnsborg/laravel-pdf": "^2.0",
+        "paypal/rest-api-sdk-php": "^1.13"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
