--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "niklasravnsborg/laravel-pdf": "^2.0",
-        "paypal/rest-api-sdk-php": "^1.13"
+        "paypal/rest-api-sdk-php": "^1.13",
+        "spatie/laravel-newsletter": "^4.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
